# simphoniz

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
.circleci/: config.yml
.github/workflows/: cmake.yml
app/: CMakeLists.txt  main.cpp
cmake/: SimphonizBuildType.cmake  SimphonizCodeFormatter.cmake  SimphonizCompiler.cmake  SimphonizExternalTools.cmake  SimphonizPackage.cmake  SimphonizParams.cmake  SimphonizUtils.cmake  build_type.cmake  code_formatter.cmake  compiler.cmake  external_tools.cmake  package.cmake  params.cmake  utils.cmake
cmake/modules/: FindIconv.cmake
doc/: CMakeLists.txt  Doxyfile.in
include/simphoniz/: Application.h  ApplicationInformation.h
include/simphoniz/cli/: CommandLineData.h  CommandLineParser.h  CommandLineParsingResult.h
include/simphoniz/exception/: Exception.h  exception_macros.h
include/simphoniz/io/: PhotoDirectoryParser.h
include/simphoniz/io/console/: CommandLineData.h  CommandLineParser.h  CommandLineParsingResult.h  ProgressBar.h
include/simphoniz/io/photo/: PhotoDirectoryParser.h
include/simphoniz/log/: LogManager.h  log_macros.h
include/simphoniz/photo/: PhotoDirectory.h  PhotoFile.h  PhotoResource.h
include/simphoniz/processing/: PhotoCounter.h  PhotoResourceVisitor.h  PhotoSorter.h
resources/cpp/: Application.cpp.in  ApplicationInformation.cpp.in
resources/nsis/: NSIS.definitions.nsh.in  NSIS.template.in
src/: CMakeLists.txt
src/cli/: CommandLineParser.cpp
src/exception/: Exception.cpp
src/io/: PhotoDirectoryParser.cpp  exif_tags.cpp  exif_tags.h
src/io/console/: CommandLineParser.cpp  ProgressBar.cpp
src/io/photo/: PhotoDirectoryParser.cpp  exif_tags.cpp  exif_tags.h
src/log/: LogManager.cpp
src/photo/: PhotoDirectory.cpp  PhotoFile.cpp  PhotoResource.cpp
src/processing/: PhotoCounter.cpp  PhotoResourceVisitor.cpp  PhotoSorter.cpp
test/: CMakeLists.txt
test/installer/linux/debian/: Dockerfile  run_test_env.sh
test/src/: TestException.cpp  TestException.h  TestPhotoCounter.cpp  TestPhotoCounter.h  TestPhotoDirectory.cpp  TestPhotoDirectoryParser.cpp  TestPhotoDirectoryParser.h  TestPhotoFile.cpp  TestPhotoSorter.cpp  TestPhotoSorter.h  common.cpp  common.h
test/src/io/: TestPhotoDirectoryParser.cpp  TestPhotoDirectoryParser.h
test/src/io/photo/: TestPhotoDirectoryParser.cpp  TestPhotoDirectoryParser.h
test/src/io/photo/PhotoDirectoryParser/: TestPhotoDirectoryParser.cpp  TestPhotoDirectoryParser.h
test/src/photo/: TestPhotoDirectory.cpp  TestPhotoDirectory.h  TestPhotoFile.cpp  TestPhotoFile.h
test/src/photo/PhotoDirectory/: TestPhotoDirectory.cpp  TestPhotoDirectory.h
test/src/photo/PhotoFile/: TestPhotoFile.cpp  TestPhotoFile.h
test/src/processing/: TestPhotoCounter.cpp  TestPhotoCounter.h  TestPhotoSorter.cpp  TestPhotoSorter.h
test/src/processing/PhotoCounter/: TestPhotoCounter.cpp  TestPhotoCounter.h
test/src/processing/PhotoSorter/: TestPhotoSorter.cpp  TestPhotoSorter.h
